--- a/monitore/docker-compose.yml
+++ b/monitore/docker-compose.yml
@@ -12,7 +12,8 @@ services:
     ports:
       - 7000:9090
     volumes:
-      - ./prometheus.yml:/etc/prometheus/prometheus.yml
+#      - ./prometheus.yml:/etc/prometheus/prometheus.yml
+      - c:/Games:/etc/prometheus
     environment:
       - config.file=/etc/prometheus/prometheus.yml
     restart: always
