--- a/banco-old-service/pom.xml
+++ b/banco-old-service/pom.xml
@@ -190,6 +190,14 @@
             <artifactId>spring-security-test</artifactId>
         </dependency>
 
+        <!-- OpenTracing / Jaeger Instrumentation -->
+        <!-- https://github.com/opentracing-contrib/java-spring-jaeger -->
+        <dependency>
+            <groupId>io.opentracing.contrib</groupId>
+            <artifactId>opentracing-spring-jaeger-web-starter</artifactId>
+            <version>2.0.3</version>
+        </dependency>
+
     </dependencies>
 
     <build>
