--- a/banco-central-service/pom.xml
+++ b/banco-central-service/pom.xml
@@ -188,6 +188,12 @@
             <artifactId>spring-security-test</artifactId>
         </dependency>
 
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <scope>provided</scope>
+        </dependency>
+
     </dependencies>
 
     <build>
