--- a/banco-central-service/pom.xml
+++ b/banco-central-service/pom.xml
@@ -194,6 +194,21 @@
             <scope>provided</scope>
         </dependency>
 
+        <!-- Ecache -->
+            <dependency>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-starter-cache</artifactId>
+            </dependency>
+            <dependency>
+                <groupId>javax.cache</groupId>
+                <artifactId>cache-api</artifactId>
+            </dependency>
+            <dependency>
+                <groupId>org.ehcache</groupId>
+                <artifactId>ehcache</artifactId>
+            </dependency>
+        <!-- Ecache -->
+
     </dependencies>
 
     <build>
