[skip ci]  Confetes

--- a/banco-central-service/pom.xml
+++ b/banco-central-service/pom.xml
@@ -282,6 +282,7 @@
                 <spring.profiles.active>prod</spring.profiles.active>
             </properties>
         </profile>
+
         <profile>
             <id>dev</id>
             <activation>
@@ -290,6 +291,13 @@
             <properties>
                 <spring.profiles.active>dev</spring.profiles.active>
             </properties>
+<!--            <dependencies>-->
+<!--                <dependency>-->
+<!--                    <groupId>com.h2database</groupId>-->
+<!--                    <artifactId>h2</artifactId>-->
+<!--                    <scope>runtime</scope>-->
+<!--                </dependency>-->
+<!--            </dependencies>-->
         </profile>
 
         <profile>
