--- a/compose/docker-compose.yml
+++ b/compose/docker-compose.yml
@@ -14,20 +14,33 @@ services:
     environment:
       - SPRING_PROFILES_ACTIVE=prod
     restart: always
-    healthcheck:
-      test: CMD curl --fail -s http://localhost:9090/actuator/health/ || exit 1
-      #      test: [ "CMD", "curl", "--fail", "-s", "http://localhost:9090/actuator/health || exit 1" ]
-      interval: 1m30s
-      timeout: 10s
-      retries: 300
+#    healthcheck:
+#      test: CMD curl --fail -s http://localhost:9090/actuator/health/ || exit 1
+#      #      test: [ "CMD", "curl", "--fail", "-s", "http://localhost:9090/actuator/health || exit 1" ]
+#      interval: 1m30s
+#      timeout: 10s
+#      retries: 300
     deploy:
       resources:
         limits:
+          # (50% de um único núcleo) do tempo de processamento disponível (CPU)
           cpus: '0.50'
-          memory: 350M
+          # restrito a usar não mais do que 100M de memória
+          memory: 100M
         reservations:
+          # 0.25 CPU reservado (como sempre disponível)
           cpus: '0.25'
-          memory: 280M
+          # tem tempo 50Mde memória
+          memory: 50M
+      restart_policy:
+        # Um de none, on-failureou any(padrão any:).
+        condition: on-failure
+        # Quanto tempo de espera entre as tentativas de reinicialização, especificadas como uma duração (padrão: 0).
+        delay: 10s
+        # Quantas vezes para tentar reiniciar um contêiner antes de desistir (padrão: nunca desista)
+        max_attempts: 4
+        # Quanto tempo esperar antes de decidir se uma reinicialização foi bem-sucedida, especificada como uma duração (padrão: decidir imediatamente).
+        window: 120s
 
   admin-service:
     image: nosbielc/mixed-salad-admin-service:latest
@@ -40,6 +53,19 @@ services:
     restart: always
     depends_on:
       - config-service
+    deploy:
+      resources:
+        limits:
+          cpus: '0.50'
+          memory: 100M
+        reservations:
+          cpus: '0.25'
+          memory: 50M
+      restart_policy:
+        condition: on-failure
+        delay: 10s
+        max_attempts: 4
+        window: 120s
 
   discovery-service:
     image: nosbielc/mixed-salad-discovery-service:latest
@@ -53,6 +79,19 @@ services:
     depends_on:
       - config-service
       - admin-service
+    deploy:
+      resources:
+        limits:
+          cpus: '0.50'
+          memory: 100M
+        reservations:
+          cpus: '0.25'
+          memory: 50M
+      restart_policy:
+        condition: on-failure
+        delay: 10s
+        max_attempts: 4
+        window: 120s
 
   gateway-service:
     image: nosbielc/mixed-salad-gateway-service:latest
@@ -67,6 +106,19 @@ services:
       - config-service
       - admin-service
       - discovery-service
+    deploy:
+      resources:
+        limits:
+          cpus: '0.50'
+          memory: 100M
+        reservations:
+          cpus: '0.25'
+          memory: 50M
+      restart_policy:
+        condition: on-failure
+        delay: 10s
+        max_attempts: 4
+        window: 120s
 
   zipkin-service:
     image: nosbielc/mixed-salad-zipkin-service:latest
@@ -82,6 +134,19 @@ services:
       - admin-service
       - discovery-service
       - gateway-service
+    deploy:
+      resources:
+        limits:
+          cpus: '0.50'
+          memory: 100M
+        reservations:
+          cpus: '0.25'
+          memory: 50M
+      restart_policy:
+        condition: on-failure
+        delay: 10s
+        max_attempts: 4
+        window: 120s
 
   auth-service:
     image: nosbielc/mixed-salad-auth-service:latest
@@ -98,6 +163,19 @@ services:
       - discovery-service
       - gateway-service
       - zipkin-service
+    deploy:
+      resources:
+        limits:
+          cpus: '0.50'
+          memory: 100M
+        reservations:
+          cpus: '0.25'
+          memory: 50M
+      restart_policy:
+        condition: on-failure
+        delay: 10s
+        max_attempts: 4
+        window: 120s
 
   banco-central-service:
     image: nosbielc/mixed-salad-banco-central-service:latest
@@ -115,9 +193,21 @@ services:
       - gateway-service
       - zipkin-service
       - auth-service
-#    deploy:
-#      mode: replicated
-#      replicas: 4
+    deploy:
+      mode: replicated
+      replicas: 4
+      resources:
+        limits:
+          cpus: '0.50'
+          memory: 100M
+        reservations:
+          cpus: '0.25'
+          memory: 50M
+      restart_policy:
+        condition: on-failure
+        delay: 10s
+        max_attempts: 4
+        window: 120s
 
   prometheus-service:
     image: prom/prometheus
@@ -131,7 +221,21 @@ services:
     environment:
       - config.file=/etc/prometheus/prometheus.yml
     restart: always
+    deploy:
+      resources:
+        limits:
+          cpus: '0.50'
+          memory: 100M
+        reservations:
+          cpus: '0.25'
+          memory: 50M
+      restart_policy:
+        condition: on-failure
+        delay: 10s
+        max_attempts: 4
+        window: 120s
 
+  # Veja o link https://grafana.com/dashboards/6756 para saber mais sobre o plugin indicado
   grafana-service:
     image: grafana/grafana
     networks:
@@ -141,4 +245,46 @@ services:
     restart: always
     depends_on:
       - prometheus-service
-    #Veja o link https://grafana.com/dashboards/6756 para saber mais sobre o plugin indicado
+    deploy:
+      resources:
+        limits:
+          cpus: '0.50'
+          memory: 100M
+        reservations:
+          cpus: '0.25'
+          memory: 50M
+      restart_policy:
+        condition: on-failure
+        delay: 10s
+        max_attempts: 4
+        window: 120s
+
+
+  jeager-service:
+    image: jaegertracing/all-in-one:1.9
+    networks:
+      - msNet
+    ports:
+      - "5775:5775/udp"
+      - "6831:6831/udp"
+      - "6832:6832/udp"
+      - "5778:5778"
+      - "16686:16686"
+      - "14268:14268"
+      - "9411:9411"
+    environment:
+      - COLLECTOR_ZIPKIN_HTTP_PORT=9411
+    restart: always
+    deploy:
+      resources:
+        limits:
+          cpus: '0.50'
+          memory: 100M
+        reservations:
+          cpus: '0.25'
+          memory: 50M
+      restart_policy:
+        condition: on-failure
+        delay: 10s
+        max_attempts: 4
+        window: 120s
